--- a/pages/styles.css
+++ b/pages/styles.css
@@ -101,17 +101,20 @@ img {
     background-color: transparent;
     color: #0056b3;
     border: 2px solid #0056b3;
+    
 }
 
 .btn-outline:hover {
     background-color: #0056b3;
     color: white;
+    
 }
 
 .btn-outline-light {
     background-color: transparent;
     color: white;
     border: 2px solid white;
+    
 }
 
 .btn-outline-light:hover {
@@ -275,7 +278,7 @@ nav ul li a.active::after {
 
 /* Featured Cars */
 .featured-cars {
-    padding: 80px 0;
+    padding: 50px 0;
 }
 
 .cars-grid {
@@ -380,6 +383,9 @@ nav ul li a.active::after {
 .view-all {
     text-align: center;
     margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Services Section */
@@ -1091,4 +1097,3 @@ footer {
     margin-right: 8px;
     vertical-align: middle;
  }
-  
